--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <div id="counter"></div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="styles.css">
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 <div class="button_group">
 	<button id="subtract">- 10</button>
 	<button id="reset">Reset</button>
