--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <head>
 <script type="text/javascript" src="https://raw.githack.com/Naruyoko/OmegaNum.js/master/OmegaNum.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="styles.css">
-<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <div id="counter"></div>
@@ -15,4 +13,6 @@
   	<button id="add5">x5</button>
   <button id="add6">x6</button>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
