--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 <div class="button_group">
 	<button id="subtract">- 10</button>
 	<button id="reset">Reset</button>
-	<button id="add2">x2</button>
-  	<button id="add3">x3</button>
-  	<button id="add4">x4</button>
-  	<button id="add5">x5</button>
-  <button id="add6">x6</button>
+	<button id="mult2">x2</button>
+  	<button id="mult3">x3</button>
+  	<button id="mult4">x4</button>
+  	<button id="mult5">x5</button>
+  	<button id="mult6">x6</button>
+  	<button id="mult7">x7</button>
+  	<button id="mult8">x8</button>
+  	<button id="mult9">x9</button>
+  	<button id="mult10">x10</button>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
