--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <div class="button_group">
 	<button id="subtract">- 10</button>
 	<button id="reset">Reset</button>
+	<button id="add1">+1</button>
 	<button id="mult2">x2</button>
   	<button id="mult3">x3</button>
   	<button id="mult4">x4</button>
