--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
 <body>
 <div id="counter"></div>
 <div class="button_group">
-	<button id="subtract">- 10</button>
+	<button id="sub10">-10</button>
 	<button id="reset">Reset</button>
 	<button id="add1">+1</button>
+	<button id="add2">+2</button>
+	<button id="add3">+3</button>
+	<button id="add4">+4</button>
+	<button id="add5">+5</button>
+	<button id="add6">+6</button>
+	<button id="add7">+7</button>
+	<button id="add8">+8</button>
+	<button id="add9">+9</button>
+	<button id="add10">+10</button>
 	<button id="mult2">x2</button>
   	<button id="mult3">x3</button>
   	<button id="mult4">x4</button>
