--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 </head>
 <body>
 <div id="counter"></div>
-<div class="button_group">
-	<button id="sub10">-10</button>
 	<button id="reset">Reset</button>
-	<button id="add1">+1</button>
+  <div class="button_group0">
+	<button id="sub1">-1</button>
+  <button id="sub2">-2</button>
+  <button id="sub3">-3</button>
+  <button id="sub4">-4</button>
+  <button id="sub5">-5</button>
+  <button id="sub6">-6</button>
+  <button id="sub7">-7</button>
+  <button id="sub8">-8</button>
+  <button id="sub9">-9</button>
+  <button id="sub10">-10</button>
+  </div>
+  <div class="button_group1">
+  <button id="add1">+1</button>
 	<button id="add2">+2</button>
 	<button id="add3">+3</button>
 	<button id="add4">+4</button>
@@ -17,7 +28,8 @@
 	<button id="add8">+8</button>
 	<button id="add9">+9</button>
 	<button id="add10">+10</button>
-	<br>
+	</div>
+  <div class="button_group2">
 	<button id="mult2">x2</button>
   	<button id="mult3">x3</button>
   	<button id="mult4">x4</button>
