--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   	<button id="mult10">x10</button>
 	</br>
 	</div>
+  <button id="power2">^2</button>
+  <button id="tetr2">^^2</button>
+  <button id="pent2">^^^2</button>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
