--- a/index.html
+++ b/index.html
@@ -41,9 +41,39 @@
   	<button id="mult10">x10</button>
 	</br>
 	</div>
-  <button id="power2">^2</button>
-  <button id="tetr2">^^2</button>
-  <button id="pent2">^^^2</button>
+<div class="button_group3">
+<button id="power2">^2</button>
+<button id="power3">^3</button>
+<button id="power4">^4</button>
+<button id="power5">^5</button>
+<button id="power6">^6</button>
+<button id="power7">^7</button>
+<button id="power8">^8</button>
+<button id="power9">^9</button>
+<button id="power10">^10</button>
+</div>
+<div class="button_group4">
+<button id="tetr2">^^2</button>
+<button id="tetr3">^^3</button>
+<button id="tetr4">^^4</button>
+<button id="tetr5">^^5</button>
+<button id="tetr6">^^6</button>
+<button id="tetr7">^^7</button>
+<button id="tetr8">^^8</button>
+<button id="tetr9">^^9</button>
+<button id="tetr10">^^10</button>
+</div>
+<div class="button_group5">
+<button id="pent2">^^^2</button>
+<button id="pent3">^^^3</button>
+<button id="pent4">^^^4</button>
+<button id="pent5">^^^5</button>
+<button id="pent6">^^^6</button>
+<button id="pent7">^^^7</button>
+<button id="pent8">^^^8</button>
+<button id="pent9">^^^9</button>
+<button id="pent10">^^^10</button>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
