--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 <body>
 <div id="counter"></div>
 	<button id="reset">Reset</button>
+  <div class="button_group_minus_2">
+<button id="sqrt">√</button>
+<button id="cbrt">3√</button>
+  </div>
+  <div class="button_group_minus_1">
+	<button id="div1">/1</button>
+  <button id="div2">/2</button>
+  <button id="div3">/3</button>
+  <button id="div4">/4</button>
+  <button id="div5">/5</button>
+  <button id="div6">/6</button>
+  <button id="div7">/7</button>
+  <button id="div8">/8</button>
+  <button id="div9">/9</button>
+  <button id="div10">/10</button>
+  </div>
   <div class="button_group0">
 	<button id="sub1">-1</button>
   <button id="sub2">-2</button>
@@ -73,6 +89,15 @@
 <button id="pent8">^^^8</button>
 <button id="pent9">^^^9</button>
 <button id="pent10">^^^10</button>
+</div>
+<div class="button_group6">
+<button id="arrow5">4 ^'s</button>
+<button id="arrow6">5 ^'s</button>
+<button id="arrow7">6 ^'s</button>
+<button id="arrow8">7 ^'s</button>
+<button id="arrow9">8 ^'s</button>
+<button id="arrow10">9 ^'s</button>
+<button id="arrow11">10 ^'s</button>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
