Make square roots more clear.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div id="counter"></div>
 	<button id="reset">Reset</button>
   <div class="button_group_minus_2">
-<button id="sqrt">√</button>
+<button id="sqrt">2√</button>
 <button id="cbrt">3√</button>
   </div>
   <div class="button_group_minus_1">
