It's update time!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div class="button_group_minus_2">
 <button id="sqrt">2√</button>
 <button id="cbrt">3√</button>
+<button id="fact">x!</button>
   </div>
   <div class="button_group_minus_1">
 	<button id="div1">/1</button>
